--- a/docs/assets/experiment.ipynb
+++ b/docs/assets/experiment.ipynb
@@ -17,7 +17,7 @@
     }
    ],
    "source": [
-    "import os \n",
+    "import os\n",
     "from dotenv import load_dotenv\n",
     "\n",
     "from datasets import load_dataset\n",
@@ -68,8 +68,7 @@
    ],
    "source": [
     "HF_API_KEY = os.getenv(\"HF_API_KEY\")\n",
-    "ds = load_dataset(\"toxigen/toxigen-data\", \n",
-    "                  token=HF_API_KEY)\n",
+    "ds = load_dataset(\"toxigen/toxigen-data\", token=HF_API_KEY)\n",
     "ds"
    ]
   },
@@ -94,24 +93,19 @@
     "from abc import ABC, abstractmethod\n",
     "\n",
     "\n",
-    "class Base(ABC): \n",
-    "\n",
+    "class Base(ABC):\n",
     "    @abstractmethod\n",
-    "    def detect(self, content): \n",
+    "    def detect(self, content):\n",
     "        raise NotImplementedError\n",
-    "    \n",
+    "\n",
     "\n",
     "class Chile(Base):\n",
-    "    \n",
-    "\n",
     "    def classify(self, content, label):\n",
     "        print(content, label)\n",
     "\n",
     "\n",
-    "\n",
     "chile = Chile()\n",
-    "chile.classify(content=\"Hello\", \n",
-    "             label=\"worlds\")"
+    "chile.classify(content=\"Hello\", label=\"worlds\")"
    ]
   },
   {
@@ -120,8 +114,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_ds = ds['train']\n",
-    "test_ds = ds['test']"
+    "train_ds = ds[\"train\"]\n",
+    "test_ds = ds[\"test\"]"
    ]
   },
   {
@@ -336,9 +330,9 @@
     }
    ],
    "source": [
-    "for col in train_df.columns: \n",
+    "for col in train_df.columns:\n",
     "    unique_values = train_df[col].unique()\n",
-    "    if col != 'text': \n",
+    "    if col != \"text\":\n",
     "        print(f\"Unique values of `{col}`: {unique_values}\")"
    ]
   },
@@ -642,7 +636,9 @@
     "import requests\n",
     "\n",
     "\n",
-    "requests.get(url=\"https://drive.google.com/file/d/11gNV-2NOX5JrGX_OvYyydNL2ZjQBQH9U/view?usp=drive_link\")"
+    "requests.get(\n",
+    "    url=\"https://drive.google.com/file/d/11gNV-2NOX5JrGX_OvYyydNL2ZjQBQH9U/view?usp=drive_link\"\n",
+    ")"
    ]
   }
  ],
